--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indigo - English Learning App</title>
+    <title>Vocadigo - English Learning App</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Indigo</h1>
+        <h1>Vocadigo</h1>
         <p>Learn English through videos, novels & music</p>
     </header>
 
