--- a/privacy.html
+++ b/privacy.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h2>Privacy Policy</h2>
-            <p>Last updated: [当前日期]</p>
+            <p>Last updated: [2025-5-28]</p>
 
             <h3>1. Information We Don't Collect</h3>
             <p>Indigo is designed with your privacy in mind. We do not collect, store, or transmit any personal information. All your media files and learning data are stored locally on your device.</p>
