--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h2>Contact</h2>
-            <p>Email: your.email@example.com</p>
+            <p>Email: 2691404548@qq.com</p>
         </section>
 
         <section>
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Indigo. All rights reserved.</p>
+        <p>© 2025 Vocadigo. All rights reserved.</p>
     </footer>
 </body>
 </html>
