--- a/privacy.html
+++ b/privacy.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Indigo</title>
+    <title>Privacy Policy - Vocadigo</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Indigo</h1>
+        <h1>Vocadigo</h1>
         <p>Privacy Policy</p>
     </header>
 
@@ -24,7 +24,7 @@
             <p>Last updated: [2025-5-28]</p>
 
             <h3>1. Information We Don't Collect</h3>
-            <p>Indigo is designed with your privacy in mind. We do not collect, store, or transmit any personal information. All your media files and learning data are stored locally on your device.</p>
+            <p>Vocadigo is designed with your privacy in mind. We do not collect, store, or transmit any personal information. All your media files and learning data are stored locally on your device.</p>
 
             <h3>2. Local Storage</h3>
             <p>The app stores the following data locally on your device:</p>
@@ -36,7 +36,7 @@
             </ul>
 
             <h3>3. Media Access Permissions</h3>
-            <p>Indigo requires access to:</p>
+            <p>Vocadigo requires access to:</p>
             <ul>
                 <li>Local storage - to access your media files</li>
                 <li>Documents folder - to import/export Anki files</li>
@@ -46,7 +46,7 @@
             <p>We do not integrate with any third-party services or analytics tools. All functionality is handled locally on your device.</p>
 
             <h3>5. Data Security</h3>
-            <p>Since all data is stored locally on your device, data security depends on your device's security settings. We recommend keeping your device's operating system and Indigo app up to date.</p>
+            <p>Since all data is stored locally on your device, data security depends on your device's security settings. We recommend keeping your device's operating system and Vocadigo app up to date.</p>
 
             <h3>6. Children's Privacy</h3>
             <p>Our app does not collect any personal information from anyone, including children under 13.</p>
